--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="15dp"
     android:background="@drawable/backgroung2_new"
-    tools:context=".Activities.Register">
+    tools:context=".activities.Register">
 
     <TextView
         android:text="@string/register"
