--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/new_background1"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".Activities.SplashScreen">
+    tools:context=".activities.SplashScreen">
 
     <ImageView
         android:layout_width="200dp"
